# jack_fft_visualizer

./: .gitignore  CMakeLists.txt  README.md
include/: dsp.h  gui_elements.h  helper.h  jack_stuff.h  simple_dft.h  simple_fft.h  spectrum_gui.h  thread_stuff.h
shader/: circle.fs  smear.fs
src/: dsp.c  fft_test.c  gui_elements.c  jack_stuff.c  main.c  simple_dft.c  simple_fft.c  spectrum_gui.c  thread_stuff.c
